Fix bug 162424 (konqueror crashes on any right click) recently introduced.

when calling QList<>::items().begin() (when the QList is the return value from a shared pointer) you
may get a different list when calling the corresponding end() function.  In fact the iterator returned
by that begin() is invalid as soon as the next line executes.

BUG:162424

svn path=/trunk/KDE/kdebase/apps/; revision=811027